# sheriff_documentary_analysis

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
cleaning_notebooks/: 1_process_ucr.ipynb  2_flag_incidents.ipynb
data/lee-data-2024/: Federal_Table_2_Full-time_Law_Enforcement_Employees_by_Federal_Agency_2024.xlsx  Table_70_Full_time_Law_Enforcement_Employees_by_Region_and_Geographic_Division_by_Rate_2024.xlsx  Table_71_Full_time_Law_Enforcement_Officers_by_Region_and_Geographic_Division_by_Rate_2024.xlsx  Table_72_Full_time_Law_Enforcement_Employees_Range_in_Rate_per_1000_Inhabitants_by_Population_Group_2024.xlsx  Table_73_Full_time_Law_Enforcement_Officers_Range_in_Rate_per_1000_Inhabitants_by_Population_Group_2024.xlsx  Table_74_Full_time_Law_Enforcement_Employees_by_Population_Group_Percent_Male_and_Female_2024.xlsx  Table_75_Full_time_Law_Enforcement_Employees_by_Population_Group_Percent_of_Total_2024.xlsx  Table_76_Full_time_State_Law_Enforcement_Employees_by_State_2024.xlsx  Table_77_Full_time_Law_Enforcement_Employees_by_State_2024.xlsx  Table_78_Full_time_Law_Enforcement_Employees_by_State_by_Cities_2024.xlsx  Table_79_Full_time_Law_Enforcement_Employees_by_State_by_University_and_College_2024.xlsx  (+2 more)
notebooks/: 1_arrests_analysis.ipynb  2_police_killings_national.ipynb  3_police_killings_state.ipynb
outputs/: agency_population.csv  agency_staff_all_years.csv  arrests_by_state.csv  arrests_by_year.csv  incident_rate_by_arrest_year.csv  staff_by_state.csv  state_staff_and_incidents.csv
