[tool.poetry]
name = "sheriffs_public"
version = "0.1.0"
description = ""
authors = ["Scott Pham <scottgpham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
jupyter = "^1.0.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
pyjanitor = "^0.26.0"
bs4 = "^0.0.1"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
nbexec = "^0.2.0"
matplotlib = "^3.8.0"
census = "^0.8.21"
seaborn = "^0.13.2"
docxtpl = "^0.16.7"
pyreadr = "^0.5.0"
humanfriendly = "^10.0"
tabulate = "^0.9.0"
prettytable = "^3.10.0"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
